[package]
name = "rspectrum"
version = "0.0.1"
authors = ["bitterlox <AngelloxBit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mongodb = "1.1.1"
bson = "1.1.0"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

hex = "0.4.2"
bytes = "0.5.6"
serde_json = "1.0"